Added background color options, pretty easily extendable

--- a/RedditCrap/app/html/popup.html
+++ b/RedditCrap/app/html/popup.html
@@ -30,8 +30,32 @@
     <ul id="crappySites">
 
     </ul>
-
     <button id='reset'> Reset to default blacklist </button>
+    <br>
+
+
+    <fieldset>
+        <legend> Highlight Color </legend>
+        <label>
+        <form name="radio-form">
+        <input type="radio" class="radio-color" name="color" id="radioColor" value="red" checked/>
+            <img src="../res/red.png">
+        </label>
+        <label>
+            <input type="radio" class="radio-color" name="color" id="radioColor" value="blue" />
+            <img src="../res/blue.png">
+        </label>
+        <label>
+          <input type="radio" class="radio-color" name="color" id="radioColor" value="green" />
+          <img src="../res/green.png">
+      </label>
+      <label>
+          <input type="radio" class="radio-color" name="color" id="radioColor" value="black" />
+          <img src="../res/black.png">
+      </label>
+      </form>
+  </fieldset>
+</body>
 </body>
 
 <script src="../js/popup.js"></script>
