--- a/RedditCrap/app/html/popup.html
+++ b/RedditCrap/app/html/popup.html
@@ -35,26 +35,35 @@
 
 
     <fieldset>
-        <legend> Highlight Color </legend>
-        <label>
+        <legend> Highlight Colour </legend>
         <form name="radio-form">
-        <input type="radio" class="radio-color" name="color" id="radioColor" value="red" checked/>
-            <img src="../res/red.png">
-        </label>
-        <label>
-            <input type="radio" class="radio-color" name="color" id="radioColor" value="blue" />
-            <img src="../res/blue.png">
-        </label>
-        <label>
-          <input type="radio" class="radio-color" name="color" id="radioColor" value="green" />
-          <img src="../res/green.png">
-      </label>
-      <label>
-          <input type="radio" class="radio-color" name="color" id="radioColor" value="black" />
-          <img src="../res/black.png">
-      </label>
-      </form>
-  </fieldset>
+
+            <label>
+                <input type="radio" class="radio-color" name="color" id="radioColor" value="red" checked/>
+                <svg width="16" height="16">
+                    <rect width="16" height="16" style="fill:rgb(255,0,0);stroke-width:0;stroke:rgb(0,0,0)" />
+                </svg>
+            </label>
+            <label>
+                <input type="radio" class="radio-color" name="color" id="radioColor" value="blue" />
+                <svg width="16" height="16">
+                    <rect width="16" height="16" style="fill:rgb(0,0,255);stroke-width:0;stroke:rgb(0,0,0)" />
+                </svg>
+            </label>
+            <label>
+                <input type="radio" class="radio-color" name="color" id="radioColor" value="green" />
+                <svg width="16" height="16">
+                    <rect width="16" height="16" style="fill:rgb(0,255,0);stroke-width:0;stroke:rgb(0,0,0)" />
+                </svg>
+            </label>
+            <label>
+             <input type="radio" class="radio-color" name="color" id="radioColor" value="black" />
+             <svg width="16" height="16">
+                 <rect width="16" height="16" style="fill:rgb(0,0,0);stroke-width:0;stroke:rgb(0,0,0)" />
+             </svg>
+         </label>
+     </form>
+ </fieldset>
 </body>
 </body>
 
