Removed unnecissary SVG code

--- a/RedditCrap/app/html/popup.html
+++ b/RedditCrap/app/html/popup.html
@@ -39,27 +39,27 @@
         <form name="radio-form">
 
             <label>
-                <input type="radio" class="radio-color" name="color" id="radioColor" value="red" checked/>
+                <input type="radio" class="radio-color" name="color" id="radioColor" value="red"/>
                 <svg width="16" height="16">
-                    <rect width="16" height="16" style="fill:rgb(255,0,0);stroke-width:0;stroke:rgb(0,0,0)" />
+                    <rect width="16" height="16" style="fill:rgb(255,0,0);" />
                 </svg>
             </label>
             <label>
                 <input type="radio" class="radio-color" name="color" id="radioColor" value="blue" />
                 <svg width="16" height="16">
-                    <rect width="16" height="16" style="fill:rgb(0,0,255);stroke-width:0;stroke:rgb(0,0,0)" />
+                    <rect width="16" height="16" style="fill:rgb(0,0,255);" />
                 </svg>
             </label>
             <label>
                 <input type="radio" class="radio-color" name="color" id="radioColor" value="green" />
                 <svg width="16" height="16">
-                    <rect width="16" height="16" style="fill:rgb(0,255,0);stroke-width:0;stroke:rgb(0,0,0)" />
+                    <rect width="16" height="16" style="fill:rgb(0,255,0);" />
                 </svg>
             </label>
             <label>
              <input type="radio" class="radio-color" name="color" id="radioColor" value="black" />
              <svg width="16" height="16">
-                 <rect width="16" height="16" style="fill:rgb(0,0,0);stroke-width:0;stroke:rgb(0,0,0)" />
+                 <rect width="16" height="16" style="fill:rgb(0,0,0);" />
              </svg>
          </label>
      </form>
