--- a/RedditCrap/app/html/popup.html
+++ b/RedditCrap/app/html/popup.html
@@ -39,7 +39,7 @@
         <form name="radio-form">
 
             <label>
-                <input type="radio" class="radio-color" name="color" id="radioColor" value="red"/>
+                <input type="radio" class="radio-color" name="color" id="radioColor" value="red" checked/>
                 <svg width="16" height="16">
                     <rect width="16" height="16" style="fill:rgb(255,0,0);" />
                 </svg>
