Tried to make it look better than your mom.

--- a/RedditCrap/app/html/popup.html
+++ b/RedditCrap/app/html/popup.html
@@ -10,28 +10,23 @@
 </head>
 
 <body>
-    <fieldset>
-        <legend> Settings </legend>
-        <form id="actionForm">
-            <select id="crappyAction">
-                <option value='none' disabled selected>What happens to blacklisted entries?</option>
-                <option value="colour">Colourize</option>
-                <option value="hide">Hide</option>
-            </select>
-        </form>
-    </fieldset>
-
+    <form id="actionForm">
+        <select id="crappyAction">
+            <option value='none' disabled selected>What happens to blacklisted entries?</option>
+            <option value="colour">Colourize</option>
+            <option value="hide">Hide</option>
+        </select>
+    </form>
     <form id="siteForm">
-        <label for="siteInput"> Enter site: </label>
-        <input type="text" id="siteInput">
-        <input type="submit" value="Add to blacklist">
+        <input type="text" id="siteInput" placeholder="Website URL">
+        <input type="submit" class="green" value="Add to blacklist">
     </form>
 
     <ul id="crappySites">
 
     </ul>
 
-    <button id='reset'> Reset to default blacklist </button>
+    <button id='reset' class="red">Reset to default blacklist</button>
 </body>
 
 <script src="../js/popup.js"></script>
