Renamed variables for clarity, changed 'color

--- a/RedditCrap/app/html/popup.html
+++ b/RedditCrap/app/html/popup.html
@@ -33,25 +33,25 @@
         <form name="radio-form">
 
             <label>
-                <input type="radio" class="radio-color" name="color" id="radioColor" value="red"/>
+                <input type="radio" class="radio-colour" name="colour" id="radioColour" value="red"/>
                 <svg width="16" height="16">
                     <rect width="16" height="16" style="fill:rgb(255,0,0);" />
                 </svg>
             </label>
             <label>
-                <input type="radio" class="radio-color" name="color" id="radioColor" value="blue" />
+                <input type="radio" class="radio-colour" name="colour" id="radioColour" value="blue" />
                 <svg width="16" height="16">
                     <rect width="16" height="16" style="fill:rgb(0,0,255);" />
                 </svg>
             </label>
             <label>
-                <input type="radio" class="radio-color" name="color" id="radioColor" value="green" />
+                <input type="radio" class="radio-colour" name="colour" id="radioColour" value="green" />
                 <svg width="16" height="16">
                     <rect width="16" height="16" style="fill:rgb(0,255,0);" />
                 </svg>
             </label>
             <label>
-             <input type="radio" class="radio-color" name="color" id="radioColor" value="black" />
+             <input type="radio" class="radio-colour" name="colour" id="radioColour" value="black" />
              <svg width="16" height="16">
                  <rect width="16" height="16" style="fill:rgb(0,0,0);" />
              </svg>
